@@ -1,152 +1,32 @@
-import nebula.plugin.release.git.base.ReleasePluginExtension
-import nl.javadude.gradle.plugins.license.LicenseExtension
-import java.util.*
-
 plugins {
-    `java-library`
-    `maven-publish`
-    signing
-
-    id("org.jetbrains.kotlin.jvm") version "1.5.31"
-
-    id("nebula.maven-resolved-dependencies") version "17.3.2"
-    id("nebula.release") version "15.3.1"
-    id("io.github.gradle-nexus.publish-plugin") version "1.0.0"
-
-    id("com.github.hierynomus.license") version "0.16.1"
-    id("org.owasp.dependencycheck") version "6.5.3"
-
-    id("nebula.maven-publish") version "17.3.2"
-    id("nebula.contacts") version "5.1.0"
-    id("nebula.info") version "9.3.0"
-
-    id("nebula.javadoc-jar") version "17.3.2"
-    id("nebula.source-jar") version "17.3.2"
-    id("nebula.maven-apache-license") version "17.3.2"
+    id("org.openrewrite.build.recipe-library") version "latest.release"
 }
-
-apply(plugin = "nebula.publish-verification")
-
-configure<ReleasePluginExtension> {
-    defaultVersionStrategy = nebula.plugin.release.NetflixOssStrategies.SNAPSHOT(project)
-}
-
-dependencyCheck {
-    analyzers.assemblyEnabled = false
-    failBuildOnCVSS = 9.0F
-}
-
+// Set as appropriate for your organization
 group = "org.openrewrite"
-description = "Support for writing Recipes in GraalVM guest languages."
+description = "Tools for parsing and rewriting code in multiple languages."
 
 repositories {
-    if (!project.hasProperty("releasing")) {
-        mavenLocal()
-        maven {
-            url = uri("https://oss.sonatype.org/content/repositories/snapshots/")
+    maven {
+        url = uri("https://repo.gradle.org/gradle/libs-releases/")
+        content {
+            excludeVersionByRegex(".+", ".+", ".+-rc-?[0-9]*")
         }
     }
-    mavenCentral()
 }
 
-nexusPublishing {
-    repositories {
-        sonatype()
-    }
-}
-
-signing {
-    setRequired({
-        !project.version.toString().endsWith("SNAPSHOT") || project.hasProperty("forceSigning")
-    })
-//    isRequired = false
-    val signingKey: String? by project
-    val signingPassword: String? by project
-    useInMemoryPgpKeys(signingKey, signingPassword)
-    sign(publishing.publications["nebula"])
-}
-
-configurations.all {
-    resolutionStrategy {
-        cacheChangingModulesFor(0, TimeUnit.SECONDS)
-        cacheDynamicVersionsFor(0, TimeUnit.SECONDS)
-    }
-}
-
-val rewriteVersion = if (project.hasProperty("releasing")) {
-    "latest.release"
-} else {
-    "latest.integration"
-}
-
+val latest = rewriteRecipe.rewriteVersion.get()
 dependencies {
-    testImplementation("com.google.auto.service:auto-service:latest.release")
-    testAnnotationProcessor("com.google.auto.service:auto-service:latest.release")
+    compileOnly("org.projectlombok:lombok:latest.release")
+    compileOnly("com.google.code.findbugs:jsr305:latest.release")
+    annotationProcessor("org.projectlombok:lombok:latest.release")
 
-    testImplementation("org.jooq:joor:latest.release")
-    testImplementation("org.jetbrains.kotlin:kotlin-reflect")
-    testImplementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    testImplementation("org.jetbrains.kotlin:kotlin-stdlib-common")
-    testImplementation("org.openrewrite:rewrite-test:latest.integration")
-    testImplementation("org.assertj:assertj-core:latest.release")
-
-    testImplementation("org.junit.jupiter:junit-jupiter-api:latest.release")
-    testImplementation("org.junit.jupiter:junit-jupiter-params:latest.release")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:latest.release")
-    testRuntimeOnly("ch.qos.logback:logback-classic:1.0.13")
-}
-
-tasks.named<Test>("test") {
-    useJUnitPlatform()
-    jvmArgs = listOf("-XX:+UnlockDiagnosticVMOptions", "-XX:+ShowHiddenFrames")
-}
-
-tasks.named<JavaCompile>("compileJava") {
-    sourceCompatibility = JavaVersion.VERSION_11.toString()
-    targetCompatibility = JavaVersion.VERSION_11.toString()
-
-    options.isFork = true
-    options.encoding = "UTF-8"
-    options.compilerArgs.addAll(
-        listOf(
-            "-parameters",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
-        )
-    )
-}
-
-configure<nebula.plugin.contacts.ContactsExtension> {
-    val j = nebula.plugin.contacts.Contact("team@moderne.io")
-    j.moniker("Team Moderne")
-
-    people["team@moderne.io"] = j
-}
-
-configure<LicenseExtension> {
-    ext.set("year", Calendar.getInstance().get(Calendar.YEAR))
-    skipExistingHeaders = true
-    header = project.rootProject.file("gradle/licenseHeader.txt")
-    mapping(mapOf("kt" to "SLASHSTAR_STYLE", "java" to "SLASHSTAR_STYLE"))
-    exclude("src/main/resources/*.java")
-    strictCheck = true
-}
-
-configure<PublishingExtension> {
-    publications {
-        named("nebula", MavenPublication::class.java) {
-            suppressPomMetadataWarningsFor("runtimeElements")
-        }
-    }
-}
-
-tasks.withType<Javadoc> {
-    exclude(
-        "org/openrewrite/polyglot/interop/*"
-    )
+    implementation(platform("org.openrewrite:rewrite-bom:$latest"))
+    implementation("org.openrewrite:rewrite-groovy")
+    implementation("org.openrewrite:rewrite-hcl")
+    implementation("org.openrewrite:rewrite-json")
+    implementation("org.openrewrite:rewrite-maven")
+    implementation("org.openrewrite:rewrite-properties")
+    implementation("org.openrewrite:rewrite-protobuf")
+    implementation("org.openrewrite:rewrite-xml")
+    implementation("org.openrewrite:rewrite-yaml")
 }
